Fixed the completely broken CSS

--- a/wp/a2/css/all_products.css
+++ b/wp/a2/css/all_products.css
@@ -1,7 +1,7 @@
 /*, .pageBody #videoServices, .pageBody #psychicServices*/
 .pageBodyDualPage .allProducts {
-	min-width: 320px;
-	width: 30%;
+	min-width: 300px;
+	width: 32%;
 	float: left;
 	padding: 0 0.25%;
 	display: inline-block;
